--- a/DZIF26/html/events.html
+++ b/DZIF26/html/events.html
@@ -39,8 +39,8 @@
             <a href="./others.html" id="ele"ㄘ>其它</a>
         </nav>
     </div>
-    <div class-="container">
-                <div class="event-container">
+    <div class="container">
+        <div class="event-container">
 
             <div class="event-block">
                 <div class="event-text">
